<?xml version="1.0"?>
<package>
  <name>graph_map</name>
  <version>0.0.0</version>
  <description>The graph_map package</description>
  <maintainer email="rokusottervanger@gmail.com">Rokus Ottervanger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geolib2</build_depend>
  <run_depend>geolib2</run_depend>

</package>
